[package]
name = "cloud_sync"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = {version = "0.4.38", features = ["serde"]}
clap = "4.5.10"
clap_complete = "4.5.9"
hashbrown = {version = "0.14.5", features = ["serde"]}
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.204"
serde_json = "1.0.120"
toml = "0.8.16"
